src/test/deca/context/invalid/this_in_main.deca
/*
    Description : Utilisation de this dans le main

    Résultat : Erreur contextuelle
*/
{
    int x = 5;
    int y = this.x;
}
